[WinCairo][MiniBrowser] Pull down menu "Disable JavaScript" doesn't work. https://bugs.webkit.org/show_bug.cgi?id=196727

Patch by Takashi Komori <Takashi.Komori@sony.com> on 2019-04-10
Reviewed by Fujii Hironori.

* MiniBrowser/win/WebKitBrowserWindow.cpp:
(WebKitBrowserWindow::create):

Canonical link: https://commits.webkit.org/211040@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244106 268f45cc-cd09-0410-ab3c-d52691b4dbfc